applications/pgadmin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  labels:
    app: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - image: dpage/pgadmin4:6.9
          imagePullPolicy: Always
          name: pgadmin
          securityContext:
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsGroup: 5050
            runAsUser: 5050
          resources:
            requests:
              cpu: 10m
              memory: 8Mi
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: pgadmin-config
              subPath: servers.json
              mountPath: /pgadmin4/servers.json
              readOnly: true
            - name: pgadmin-config
              subPath: config_local.py
              mountPath: /pgadmin4/config_local.py
              readOnly: true
            - name: pgadmin-data
              mountPath: /var/lib/pgadmin
      volumes:
        - name: pgadmin-config
          configMap:
            name: pgadmin-config
        - name: pgadmin-data
          persistentVolumeClaim:
            claimName: pgadmin-pvc
