applications/pgadmin/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin
  labels:
    app: pgadmin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pgadmin.wesl.io`)
      kind: Rule
      services:
        - name: pgadmin
          port: 8080
      middlewares:
        - name: forward-auth
          namespace: traefik
